--- a/HTML/5.article과figure.html
+++ b/HTML/5.article과figure.html
@@ -30,7 +30,7 @@
     </p>
     <figure>
       <img
-        src="weniv.png"
+        src="./img_mp3/weniv.png"
         alt="엄마 코끼리와 아기 코끼리"
         width="300px"
         alt="위니브 친구들"
