--- a/HTML/14-svc와canvas.html
+++ b/HTML/14-svc와canvas.html
@@ -9,12 +9,12 @@
       button {
         width: 44px;
         height: 44px;
-        background: url(favicon.svg) no-repeat 50% 50% / cover;
+        background: url(./img_mp3/favicon.svg) no-repeat 50% 50% / cover;
       }
     </style>
   </head>
   <body>
-    <img src="favicon.svg" alt="weniv favicon" />
+    <img src="./img_mp3/favicon.svg" alt="weniv favicon" />
 
     <button class="button"></button>
 
@@ -51,8 +51,8 @@
       height="200"
       style="border: 1px solid #000000"
     ></canvas>
-    <img src="rosy-icon.png" alt="" />
-    <img src="rosy-icon.svg" alt="" />
+    <img src="./img_mp3/rosy-icon.png" alt="" />
+    <img src="./img_mp3/rosy-icon.svg" alt="" />
     <script>
       // 캔버스 태그에 사각형 그리기
       // 캔버스 객체 생성 및 컨텍스트 객체 생성
